@@ -1,4 +1,4 @@
-# Copyright (C) 1998-2009 by the Free Software Foundation, Inc.
+# Copyright (C) 1998-2011 by the Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -12,7 +12,8 @@
 #
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, write to the Free Software
-# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
+# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301,
+# USA.
 
 """Extend mailbox.UnixMailbox.
 """
@@ -63,7 +64,7 @@ class Mailbox(mailbox.PortableUnixMailbox):
             if self.fp.read(1) <> '\n':
                 self.fp.write('\n')
         # Seek to the last char of the mailbox
-        self.fp.seek(1, 2)
+        self.fp.seek(0, 2)
         # Create a Generator instance to write the message to the file
         g = Generator(self.fp)
         g.flatten(msg, unixfrom=True)
